# createyourownshorthand.com

./: .gitignore  .gitmodules  .justfile  CMakeLists.txt  LICENSE  README.md  build.sh  command.go  config.toml  cors.json  go.mod  go.sum  main.go  options.json  render.go  stream.cpp  write.cpp
content/: _index.org
layouts/: index.html
layouts/shortcodes/: fast.html  hank.html  my-toc.html
static/: fonts.css  style.css
static/js/: script_tool.js  survey.js
